kubernetes/homelab/apps/networking/cloudflared/bastion/http-route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ssh-bastion
spec:
  parentRefs:
    - name: envoy-external
      namespace: networking
      sectionName: https
  hostnames:
    - bastion.drmoo.io
  rules:
    - backendRefs:
        - name: ssh-bastion
          port: 2222
